@@ -64,8 +64,8 @@ module ActiveMerchant #:nodoc:
             
         errors.add "first_name", "cannot be empty"               if @first_name.blank?
         errors.add "last_name", "cannot be empty"                if @last_name.blank?
-        errors.add "month", "cannot be empty"                    unless valid_month?(@month)
-        errors.add "year", "cannot be empty"                     unless valid_expiry_year?(@year)
+        errors.add "month", "is not a valid month"               unless valid_month?(@month)
+        errors.add "year", "is not a valid year"                 unless valid_expiry_year?(@year)
 
         # Bogus card is pretty much for testing purposes. Lets just skip these extra tests if its used
         
