@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Enhance credit card error messages [manfred]
+#
 # * Use HashWithIndifferentAccess for CreditCard for compatibility with Rails applications [michael.j.mangino]
 #
 # * Fix nil exception when no response reason text is found in Authorize.net [cody]
